fixed alignment issues with flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,9 +14,6 @@ body {
     color: var(--primary);
     font-family: Helvetica, Arial, sans-serif;
 }
-
-
-
 /* Header Style Section */
 header {
     padding: 10px;
@@ -24,8 +21,6 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
     top: 0;
     background-image: url("../images/plant.jpg");
     background-size: cover;
@@ -38,10 +33,6 @@ header h1 {
     font-weight: lighter;
     font-size: 6vw;
     margin: 40px; 
-}
-nav {
-    margin: 7px 0;
-    color: var(--tertiary);
 }
 header a {
     text-decoration: none;
@@ -78,8 +69,8 @@ header nav ul li a {
 .hero-cta {
     width: 80%;
     text-align: center;
+    font-style: italic;
     margin: .5%;
-    font-size: 18px;
     line-height: 1.2;
     padding: 5px;
 }
@@ -123,14 +114,12 @@ header nav ul li a {
     width: 80%;
     margin: 0 auto; 
 }
-/* Portfolio Style Section */
-
+ 
 
 /* Portfolio Grid Section  */
 .work-samples {
    background: rgb(235,200,178, .5);
 }
-
 .grid-container {
     display: grid;
     column-gap: 10px;
@@ -139,7 +128,6 @@ header nav ul li a {
     grid-template rows: minmax(150px, 1fr);
     grid-auto-flow: dense;
 }
-
 .grid-item {
     border: 5px solid var(--primary);
     grid-column: span 4;
@@ -156,7 +144,6 @@ header nav ul li a {
     font-size: 1.1rem;  
     font-weight: lighter; 
   }
-
 .grid-item:first-child {
     grid-column: span 8;
     grid-row: span 2;
@@ -171,8 +158,6 @@ header nav ul li a {
   }
 
 /* Contact Me Style Section */
-
-
 .contact {
     background:  rgb(133,112,112, .25);
 }
@@ -181,54 +166,45 @@ header nav ul li a {
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 0;
+    padding: 50px;
 }
 .contact address a {
     color: var(--tertiary);
     padding: 5px;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-weight: lighter;
+    font-style: normal;
     text-align: left;
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
+    text-align: left;
+    margin: 0 auto; 
 }
-.contact-info > * {
-    flex: 1.5;
-    margin: 15px;
-}
-
   
 /* Footer Style Section */
-
 footer {
     background: rgb(133,112,112, .25);
     width: 100%;
     padding: 40px 35px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
 }
 footer h2 {
     color: var(--tertiary);
     font-size: 2vw;
     font-weight: lighter;
-    margin: 0;
-}
-
-footer h2, footer div {
     text-align: center;
     width: 100%;
+    margin: 0;
 }
-
+footer div {
+    line-height: 1.5;
+    text-align: center;
+}
 footer a {
     color: var(--darker);
 }
   /* Portfolio Images  */
-  .run-buddy {
-    background-image: url("../images/run-buddy.jpg");
+
+.horiseon {
+    background-image: url("../images/horiseon.jpg");
   }
   
 .portfolio-1 {
@@ -268,9 +244,14 @@ footer a {
     header nav ul li a {
         font-size: 20px;
     }
+    header nav a: {
+    background-size: 100% 100%;
+    color: var(--primary);
+   }
    .contact address a {
        font-size: 1.2rem;
        font-weight: lighter;
+       width: 80%;
    }
 
 /* Media Query for Tablets and Smaller */
@@ -294,23 +275,3 @@ footer a {
     }
 }
 
-
-
-/*     
-    .section h2, section div {
-    
-      border-right: 1px solid var(--darker);
-      margin-bottom: 20px;
-      padding-bottom: 10px;
-      text-align: right;
-      font-size: 3vw;
-    }
-    .contact address a {
-        padding: 30px;
-        text-align: left;
-        width: 80%;
-        margin: 0 auto;
-    }
-
-  } */
-  
